<resources>
    <string name="app_name">CalculatorUIPorject</string>
    <string name="calculator">Calculator</string>
    <string name="example_output">25+34</string>
    <string name="modulo">%</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="left_parentheses">(</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="right_parentheses">)</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="plus_minus">+/-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
</resources>