<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/blue_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_output"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:paddingVertical="40dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/black"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulo"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_parentheses"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_parentheses"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:layout_weight="5"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/number_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_minus"
                android:layout_weight="2"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/symbol_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:layout_weight="2"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/symbol_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:layout_weight="2"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/symbol_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:layout_weight="7"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/symbol_button_background"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="7dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>